make import config a repeating pattern